# pesatech_erp

./: README.md  license.txt  pyproject.toml
demo/: control_tower_preview.html  control_tower_simulation.py  crm_simulation.py  finance_simulation.py  hcm_simulation.py  ppra_simulation.py  sales_marketing_simulation.py
pesatech_erp/: hooks.py  install.py  modules.txt
pesatech_erp/config/: desktop.py
pesatech_erp/fixtures/: dashboard_chart.json  number_card.json  role.json  workflow.json  workspace.json
pesatech_erp/pesatech_control_tower/: api.py  tasks.py
pesatech_erp/pesatech_control_tower/doctype/activity_template/: activity_template.json  activity_template.py
pesatech_erp/pesatech_control_tower/doctype/activity_template_item/: activity_template_item.json  activity_template_item.py
pesatech_erp/pesatech_control_tower/doctype/control_tower_settings/: control_tower_settings.json  control_tower_settings.py
pesatech_erp/pesatech_control_tower/doctype/employee_activity/: employee_activity.json  employee_activity.py
pesatech_erp/pesatech_control_tower/doctype/strategic_objective/: strategic_objective.json  strategic_objective.py
pesatech_erp/pesatech_control_tower/doctype/strategic_target/: strategic_target.json  strategic_target.py
pesatech_erp/pesatech_control_tower/doctype/tower_member/: tower_member.json  (+1 more)
pesatech_erp/pesatech_finance/: budget_api.py  integrations.py  tasks.py
pesatech_erp/pesatech_hcm/: payroll_api.py
pesatech_erp/pesatech_sales_marketing/: social_seed.py
pesatech_erp/www/: control-tower.html  control-tower.py
(+100 files in other folders)
