[project]
name = "pesatech_erp"
authors = [{ name = "Pesatech Solutions Limited", email = "info@pesatechsolutions.com" }]
description = "Pesatech ERP - integrated ERPNext app (Procurement, Finance, HCM, Sales & Marketing, CRM)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
